...
        enabled: true,
        readOnly: false,
        obscureText: false,
        builder: (context, menuBuilder) => TextFormField(
          contextMenuBuilder: menuBuilder,
          enableIMEPersonalizedLearning: false,
          key: const Key('vault-name-input'),
          controller: _controller,
          autofocus: true,
          maxLength: 120,
          autocorrect: false,
          enableSuggestions: false,
          decoration: InputDecoration(labelText: widget.label, counterText: ''),
...
